2001-10-01  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/requestHandler/requestHandler.py (RequestHandler.__initPorts): 
	fixed bug that would appear if you left out the permissions of the unix socket from 
	sw.conf.

	* pylibs/SocketMan/SocketMan.py (SocketMan._run): added a more useful error trace.

	* SkunkWeb/SkunkWeb/constants.py (UNIXPATH): added constant for sessionDict key

	* SkunkWeb/Services/requestHandler/requestHandler.py (_beginSession): fix
	for unix sockets.

2001-10-01  Drew Csillag  <drew@starmedia.net>

	* SkunkWeb/sw.conf.in: added userdir config and defaultIndexHtml
	stuff

	* SkunkWeb/Services/templating/Handler.py: added functionality
	for defaultIndexHtml

	* docs/opman/opman.tex: added bit about defaultIndexHtml

	* pylibs/PyDO/doc, pylibs/PyDO/example: Added docs re: scatterFetch*

	* pylibs/PyDO/PyDO.py: moved scatterFetch* methods to static_ section

2001-09-26  Drew Csillag  <drew@starmedia.net>

	* pylibs/static.py: fixed so static classes not defined in modules
	won't blow up

2001-09-25  Drew Csillag  <drew@starmedia.net>

	* pylibs/PyDO/postconn.py: never stored connection in itself
	if using cache

	* pylibs/PyDO/doc: fixed connectstring inaccuracy

	* pylibs/PyDO/PyDO.py: made commit and rollback static methods

	* pylibs/PostgreSql/__init__.py: forgot to import SkunkExcept
	
2001-09-24  Drew Csillag  <drew@starmedia.net>

	* 3.1beta2 cut

	* pylibs/AE/Executables.py: fixed idiocy bug introduced when
	making print statements work in STML templates

2001-09-21  Drew Csillag  <drew@starmedia.net>

	* pylibs/DT/DTTags.py, pylibs/DT/DTCompilerUtil: now made
	it so that if you have a multi-line <:call:> tag, you don't have
	to have the ':> on it's own line for it to work.

	* pylibs/DT/DTCompilerUtil.py, pylibs/AE/Executables.py: made
	so print statements in templates now work.

	* configure.in, SkunkWeb/configure.in: added userdir to help and
	default list of services
